--- a/index.html
+++ b/index.html
@@ -1,186 +1,196 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Evan Lewis</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+    <head>
+        <title>Evan Lewis</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="assets/css/main.css" />
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+        <link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 
 
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
 
-		  ga('create', 'UA-92519809-1', 'auto');
-		  ga('send', 'pageview');
 
-		</script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	</head>
-	<body>
-		<!-- Wrapper -->
-			<div id="wrapper">
+          ga('create', 'UA-92519809-1', 'auto');
+          ga('send', 'pageview');
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
-									<!--<span class="title">Evan Lewis</span>-->
-								</a>
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-						</div>
-					</header>
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Evan Lewis</h1>
-								<div id="center">
-									<p>Hoboken, NJ</p>
-								</div>
-								<!-- <h2>What do I do?</h2> -->
-							</header>
-							<section class="tiles">
-								<!-- <article class="tile">
-									<span class="image">
-										<img src="images/steps.png" alt="" />
-									</span>
-									<a href="steps.html">
-										<h2>Utilizing Apple Health Data</h2>
-										<div class="content">
-											<p>How can you manipulate all the data that iPhone Health stores?</p>
-										</div>
-									</a>
-								</article> -->
-								<!--
-								<article class="tile">
-									<span class="image">
-										<img src="images/hurr3ourcm.png" alt="" />
-									</span>
-									<a href="music.html">
-										<h2>Music Visualization</h2>
-										<div class="content">
-											<p>How can you easily visualize music?</p>
-										</div>
-									</a>
-								</article>-->
-								<article class="tile">
-									<span class="image">
-										<img src="images/brainWaves.png" alt="" />
-									</span>
-									<a href="brainwaves.html">
-										<h2>Visualizing Brainwaves</h2>
-										<div class="content">
-											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/roomba.png" alt="" />
-									</span>
-									<a href="hackathon.html">
-										<h2>IEEE Hackathon</h2>
-										<div class="content">
-											<p>My team's project from the IEEE club's 2016 Hackaton</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/MASH/hurr6final.png" alt="" />
-									</span>
-									<a href="mash.html">
-										<h2>Maya MASH</h2>
-										<div class="content">
-											<p>Color histogram from radar data made into an object using MASH.</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/octoKey.jpg" alt="" />
-									</span>
-									<a href="key.html">
-										<h2>3D Designed and Printed Keycap</h2>
-										<div class="content">
-											<p>Created a octopus to grasp a key on my keyboard.</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/cyberpatriot.png" alt="" />
-									</span>
-									<a href="cyberpatriot.html">
-										<h2>CyberPatriot VIII</h2>
-										<div class="content">
-											<p>Leading a team in the AFA's CyberPatriot Competition</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/streamline_transparent_resized.png" alt="" />
-									</span>
-									<a href="tdcs.html">
-										<h2>Science Research Project</h2>
-										<div class="content">
-											<p>Culmination of a three year research project</p>
-										</div>
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/brainPrint.jpg" alt="" />
-									</span>
-									<a href="brainPrint.html">
-										<h2>3D Printing my Brain</h2>
-										<div class="content">
-											<p>Life size personal brain print</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
-					</div>
+        </script>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<div id="center">
-									<p>Get in touch</p>
-								</div>
-								<ul class="icons">
-									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-						</div>
+    </head>
+    <body>
+        <!-- Wrapper -->
+            <div id="wrapper">
 
-						<div class="inner">
-							<section>
-								<ul class="copyright">
-									<li>&copy; Evan Lewis | All rights reserved</li>
-								</ul>
-							</section>
-						</div>
-					</footer>
-			</div>
-	</body>
+                <!-- Header -->
+                    <header id="header">
+                        <div class="inner">
+                                <a href="index.html" class="logo">
+                                    <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
+                                    <!--<span class="title">Evan Lewis</span>-->
+                                </a>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#menu">Menu</a></li>
+                                    </ul>
+                                </nav>
+                        </div>
+                    </header>
+                <!-- Main -->
+                    <div id="main">
+                        <div class="inner">
+                            <header>
+                                <div id="center">
+                                    <h1>Evan Lewis</h1>
+                                    <h2 style="font-family:'Droid Sans';">I break things</h2>
+                                    <p>Hoboken, NJ</p>
+                                    <hr /></br>
+                                </div>
+                            </header>
+                            <div class="inner">
+                                <section>
+                                    <p>text goes in here</p>
+                                </section>
+                            </div>
+                            <h2>Projects</h2>
+                            <hr /></br>
+                            <section class="tiles">
+                                <!--<article class="tile">
+                                    <span class="image">
+                                        <img src="images/roomba.png" alt="" />
+                                    </span>
+                                    <a href="purpleHackathon.html">
+                                        <h2>Venture Hacks: Purple Hackathon</h2>
+                                        <div class="content">
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                </article>-->
+                                <!-- <article class="tile">
+                                    <span class="image">
+                                        <img src="images/steps.png" alt="" />
+                                    </span>
+                                    <a href="steps.html">
+                                        <h2>Utilizing Apple Health Data</h2>
+                                        <div class="content">
+                                            <p>How can you manipulate all the data that iPhone Health stores?</p>
+                                        </div>
+                                    </a>
+                                </article> -->
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/brainWaves.png" alt="" />
+                                    </span>
+                                    <a href="brainwaves.html">
+                                        <h2>Brainwave Art</h2>
+                                        <div class="content">
+                                            <p>Turning thoughts into things</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/roomba.png" alt="" />
+                                    </span>
+                                    <a href="hackathon.html">
+                                        <h2>Dance Dance Roomba</h2>
+                                        <div class="content">
+                                            <p>Make Roomba control fun</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/MASH/hurr6final.png" alt="" />
+                                    </span>
+                                    <a href="mash.html">
+                                        <h2>Weather Patterns</h2>
+                                        <div class="content">
+                                            <p>Turning weather into art</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/octoKey.jpg" alt="" />
+                                    </span>
+                                    <a href="key.html">
+                                        <h2>Keythulu</h2>
+                                        <div class="content">
+                                            <p>Custom octopus keycap</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <!--<article class="tile">
+                                    <span class="image">
+                                        <img src="images/cyberpatriot.png" alt="" />
+                                    </span>
+                                    <a href="cyberpatriot.html">
+                                        <h2>CyberPatriot VIII</h2>
+                                        <div class="content">
+                                            <p>Leading a team in the AFA's CyberPatriot Competition</p>
+                                        </div>
+                                    </a>
+                                </article>-->
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/streamline_transparent_resized.png" alt="" />
+                                    </span>
+                                    <a href="tdcs.html">
+                                        <h2>Science Research Project</h2>
+                                        <div class="content">
+                                            <p>Culmination of a three year research project</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/brainPrint.jpg" alt="" />
+                                    </span>
+                                    <a href="brainPrint.html">
+                                        <h2>3D Printing my Brain</h2>
+                                        <div class="content">
+                                            <p>Life size personal brain print</p>
+                                        </div>
+                                    </a>
+                                </article>
+                            </section>
+                        </div>
+                    </div>
+
+                <!-- Footer -->
+                    <footer id="footer">
+                        <div class="inner">
+                            <section>
+                                <div id="center">
+                                    <p style="margin:0">Get in touch</p>
+                                    <a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub |</span></a>
+                                    <!--<a href="tel:" class="icon style2 fa-phone"><span class="label">Phone |</span></a></li>-->
+                                    <a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label"> Email</span></a>
+
+                                </div>
+                            </section>
+                        </div>
+                        <p></p>
+
+                        <div class="inner">
+                            <section>
+                                <ul class="copyright">
+                                    <li>&copy; Evan Lewis | All rights reserved</li>
+                                </ul>
+                            </section>
+                        </div>
+                    </footer>
+            </div>
+    </body>
 </html>
