--- a/threeTest.html
+++ b/threeTest.html
@@ -20,14 +20,14 @@
 
 	</head>
 	<body>
-		<script src="scripts/three.min.js"></script>
-		<script src="scripts/OrbitControls.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/three-orbitcontrols@2.99.1/OrbitControls.min.js"></script>
 
 		<script>
 			// Scene setup
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 1, 1000 );
-			controls = new THREE.OrbitControls( camera );
+			var controls = new THREE.OrbitControls( camera );
   		controls.addEventListener( 'change', render );
 			camera.position.z = 5;
 
